# Dodo-Engine

./: CMakeLists.txt  Dodo-Engine.sln  README.md
Dodo-Engine/: CMakeLists.txt  Dodo-Engine.vcxproj  Dodo-Engine.vcxproj.filters  default.vert  imgui.ini  renderDocSettings.cap
Dodo-Engine/code/: dodopch.h  main.cpp
Dodo-Engine/code/common/: DodoTypes.h  SimplexNoise.cpp  SimplexNoise.h  VKHelpers.h  VKIntegration.cpp  VKIntegration.h
Dodo-Engine/code/components/: ECS.cpp  ECS.h  Light.cpp  Light.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Terrain.cpp  Terrain.h  Transform.cpp  Transform.h
Dodo-Engine/code/engine/: Engine.cpp  Engine.h
Dodo-Engine/code/entity/: Camera.cpp  Camera.h  Entity.cpp  Entity.h  EntityHandler.cpp  EntityHandler.h
Dodo-Engine/code/environment/: Error.cpp  Error.h  Input.cpp  Input.h  Log.cpp  Log.h  Window.cpp  Window.h
Dodo-Engine/code/renderer/: GUI.cpp  GUI.h  Material.h  Renderer.cpp  Renderer.h  ShadowMapping.cpp  ShadowMapping.h  Skybox.cpp  Skybox.h  VulkanBuffer.h  VulkanInitializers.h
Dodo-Engine/ext/imgui/: imgui.cpp  imgui.h  imgui_demo.cpp  imgui_draw.cpp  imgui_internal.h  imgui_widgets.cpp
Dodo-Engine/ext/spdlog/: async.h  logger.h  spdlog.h
Dodo-Engine/ext/spdlog/details/: registry.h
Dodo-Engine/ext/spdlog/fmt/bundled/: core.h
Dodo-Engine/resources/models/: sphere.mtl
Dodo-Engine/resources/textures/UnitySkybox/: OutputCube.dds  convert.bat
Dodo-Engine/shaders/: default.frag  default.frag.spv  default.vert  default.vert.spv  pbr.frag  pbr.frag.spv  shadow.vert  shadow.vert.spv  skybox.frag  skybox.frag.spv  skybox.vert  skybox.vert.spv  test.frag.spv  test.vert.spv
